Kubernetes/Handson/ingress/vish1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git
  labels:
    app: git
spec:
  replicas: 2
  selector:
    matchLabels:
      app: git
  template:
    metadata:
      labels:
        app: git
    spec:
      containers:
        - name: git
          image: vish2020/gitapps
