Kubernetes/Handson/ingress/demo.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: apacheapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
      env: dev
  template:
    metadata:
      name: mydep
      labels:
        app: web
        env: dev
    spec: 
      containers:
        - name: apache
          image: vish2020/apacheapps
          ports:
            - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: apache-serv
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 32456
  selector:
    app: web
    env: dev

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gitapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: git
      env: dev
  template:
    metadata:
      name: git
      labels:
        app: git
        env: dev
    spec:
      containers:
        - name: git
          image: vish2020/gitapps
          ports:
            - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: git-serv
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 32678
  selector:
    app: git
    env: dev
