Kubernetes/Handson/ingress/ser.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git
  labels:
    app: git
spec:
  replicas: 2
  selector:
    matchLabels:
      app: git
  template:
    metadata:
      labels:
        app: git
    spec:
      containers:
        - name: git
          image: vish2020/gitapps
---
kind: Service
apiVersion: v1
metadata:
  name: git
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: git
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  labels:
    app: apache
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: vish2020/apacheapps

---
kind: Service
apiVersion: v1
metadata:
  name: apache
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: apache
