Kubernetes/Handson/ingress/ingress1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mying
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /apache
        backend:
          serviceName: apache      
          servicePort: 80
      - path: /git
        backend:
          serviceName: git
          servicePort: 80
